[gh-pages] fix headline overlap issue

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -719,6 +719,7 @@ $base_logo_width: 250px;
       color        : #363b76;
       padding-left : 30px;
       font-weight  : 400;
+      line-height  : 48px;
     }
     .solution-text{
         margin-bottom: 15px;
